# game-mk1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
source/phase_1/: CMakeLists.txt  GameSystem.cpp  GameSystem.hpp  InputSystem.cpp  InputSystem.hpp  LuaHooks.hpp  RenderSystem.cpp  RenderSystem.hpp  actions.lua  agents.lua  deposit.lua  game.lua  homebase.lua  input.lua  main.cpp  renderer.lua  steering.lua
source/phase_2/: AgentComponent.hpp  BaseComponent.hpp  BulletComponent.hpp  CMakeLists.txt  ColliderComponent.hpp  DepositComponent.hpp  GameSystem.cpp  GameSystem.hpp  InputSystem.cpp  InputSystem.hpp  LuaHooks.hpp  MotionComponent.cpp  MotionComponent.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShapeComponent.hpp  SoldierComponent.hpp  TransformComponent.hpp  WorkerAgentComponent.hpp  WorkerComponent.hpp  actions.lua  agents.lua  buildings.lua  config.hpp  game.lua  input.lua  main.cpp  renderer.lua
source/phase_3/: CMakeLists.txt  ColliderComponent.hpp  GameSystem.cpp  GameSystem.hpp  InputSystem.cpp  InputSystem.hpp  LuaHooks.hpp  MotionComponent.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  ProFi.lua  RenderSystem.cpp  RenderSystem.hpp  ShapeComponent.cpp  ShapeComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  actions.lua  agents.lua  buildings.lua  config.hpp  game.lua  input.lua  main.cpp
source/phase_3/res/: textures.xcf
